poniendo sass a el resto de pages

--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@
                   <a
                     class="nav-link link"
                     aria-current="page"
-                    href="#"
+                    href="PAGES/torneolocal.html"
                     >TORNEO LOCAL</a
                   >
                 </li>
                 <li class="a nav-item">
-                  <a class="nav-link link" href="#"
+                  <a class="nav-link link" href="PAGES/copalibertadores.html"
                     >COPA LIBERTADORES</a
                   >
                 </li>
                 <li class="a nav-item">
-                  <a class="nav-link link" href="#"
+                  <a class="nav-link link" href="PAGES/mercadodepases.html"
                     >MERCADO DE PASES</a
                   >
                 </li>
                 <li class="a nav-item">
                   <a
                     class="nav-link link"
-                    href="#"
+                    href="PAGES/NOSOTROS.html"
                     tabindex="-1"
                     >NOSOTROS</a
                   >
