--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LA GALLARDETA</title>
+    <!-- META SEO -->
+    <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate, hecho por hinchas, solo para hinchas.">
+    <meta name="keywords" content="River Plate, fútbol argentino, fútbol, Copa Libertadores, FIFA, AFA, Superliga Argentina, Marcelo Gallardo, Estadio Monumental, Más Monumental, Millonario">
+    <meta name="author" content="Sebastián Murstein">
+    <title>LA GALLARDETA, River Plate</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -27,7 +31,7 @@
             <a class="navbar-brand" href="index.html">
               <img
                 class="logo escudo escudo2"
-                src="IMAGENES/escudoriver.png"
+                src="IMAGENES/river.png"
                 alt="escudo River Plate"
               />
             </a>
@@ -63,10 +67,24 @@
                     >MERCADO DE PASES</a
                   >
                 </li>
+                <li class="a nav-item dropdown">
+                  <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    GALERIA
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li class="a"><a class="dropdown-item" href="PAGES/fotos.html">FOTOS</a></li>
+                    <li class="a"><a class="dropdown-item" href="PAGES/videos.html">VIDEOS</a></li>
+                  </ul>
+                </li>
+                <li class="a nav-item">
+                  <a class="nav-link link" href="PAGES/calendario.html"
+                    >CALENDARIO</a
+                  >
+                </li>
                 <li class="a nav-item">
                   <a
                     class="nav-link link"
-                    href="PAGES/NOSOTROS.html"
+                    href="PAGES/NOSOTROS.html "
                     tabindex="-1"
                     >NOSOTROS</a
                   >
@@ -107,7 +125,7 @@
                   sido más abultada.
                 </p>
                 <a
-                  href="#"
+                  href="PAGES/copalibertadores.html"
                   id="#velezRiver"
                   class="btn btnCard"
                   >LEER MÁS...</a
@@ -121,7 +139,7 @@
               <img
                 src="IMAGENES/miguelborja.webp"
                 class="card-img-top img-thumbnail"
-                alt="..."
+                alt="imagen del jugador Miguel Ángel Borja"
               />
               <div class="card-body">
                 <h4>MIGUEL ÁNGEL BORJA, NUEVO REFUERZO</h4>
@@ -131,7 +149,7 @@
                   contratación del colombiano en una cifra cercana a los 7M USD.
                 </p>
                 <a
-                  href="#"
+                  href="PAGES/mercadodepases.html#artBorja"
                   id="#borja"
                   class="btn btnCard"
                   >LEER MÁS...</a
@@ -145,7 +163,7 @@
               <img
                 src="IMAGENES/luissuarezvacaciones.webp"
                 class="card-img-top img-thumbnail"
-                alt="..."
+                alt="imagen de Luis Suárez y Lionel Messi de vacaciones"
               />
               <div class="card-body">
                 <h4>TE ESTAMOS ESPERANDO, PISTOLERO</h4>
@@ -155,7 +173,7 @@
                   junto a Lio Messi y Cesc Fábregas. El charrúa daría una
                   respuesta definitiva cerca del 10 de julio.
                 </p>
-                <a href="#" class="btn btnCard"
+                <a href="PAGES/mercadodepases.html#artSuarez" class="btn btnCard"
                   >LEER MÁS...</a
                 >
               </div>
@@ -167,7 +185,7 @@
               <img
                 src="IMAGENES/rodrigoaliendro.webp"
                 class="card-img-top img-thumbnail"
-                alt="..."
+                alt="imagen del jugador de fútbol Rodrigo Aliendor con los dirigentes de River"
               />
               <div class="card-body">
                 <h4>ALIENDRO EN EL DÍA DE LA FIRMA DE SU CONTRATO</h4>
@@ -178,33 +196,115 @@
                   a sacarlo. Por suerte, no fue más que una contusión, y está a
                   disposición para los próximos encuentros
                 </p>
-                <a href="#" class="btn btnCard"
+                <a href="PAGES/copalibertadores.html" class="btn btnCard"
                   >Leer más...</a
                 >
               </div>
             </div>
           </article>
-          <aside
-            class="text-center mx-auto col-sm12 col-md-6 col-lg-6 w-100 my-3"
-          >
-            <div>
+          <article class="col-sm-12 col-md-6 col-lg-3 text-center">
+            <h2 class="h2">UN NUEVO PABLO CÉSAR EN RIVER</h2>
+            <div class="card" style="width: 90%">
+              <img
+                src="IMAGENES/pablosolari.webp"
+                class="card-img-top img-thumbnail"
+                alt="imagen del jugador Pablo César Solari"
+              />
+              <div class="card-body">
+                <h4>LLEGA PROCEDENTE DEL COLO COLO CHILENO</h4>
+                <p class="card-text">
+                  River sumó su cuarto y ¿último refuerzo? Se trata del puntano Pablo César
+                  Solari, extremo del Cacique Chileno. La operación se realizó por un poco menos de 5 millones de dólares por el 60% de la ficha. El jugador ya pasó la revisión médica y selló su vínculo esta tarde en el Monumental. 
+                </p>
+                <a href="PAGES/mercadodepases.html#artSolari" class="btn btnCard"
+                  >Leer más...</a
+                >
+              </div>
+            </div>
+          </article>
+          <article class="col-sm-12 col-md-6 col-lg-3 text-center">
+            <h2 class="h2">LISTA DE CONCENTRADOS VS VÉLEZ</h2>
+            <div class="card" style="width: 90%">
+              <img
+                src="IMAGENES/rivervelez.webp"
+                class="card-img-top img-thumbnail"
+                alt="imagen del partido River vs Vélez"
+              />
+              <div class="card-body">
+                <h4>EL MILLO OTRA VEZ VISITA EL AMALFITANI</h4>
+                <p class="card-text">
+                  Marcelo Gallardo convocó a 20 jugadores para el partido del próximo domingo ante Vélez en Liniers. Miguel Ángel Borja no fue incluído en la nómina al igual que Paulo Díaz, que aqueja una molestia muscular. 
+                </p>
+                <a href="PAGES/torneolocal.html#artVelez" class="btn btnCard"
+                  >Leer más...</a
+                >
+              </div>
+            </div>
+          </article>
+          <article class="col-sm-12 col-md-6 col-lg-3 text-center">
+            <h2 class="h2">A MARTÍNEZ LO SIGUEN DESDE ESPAÑA</h2>
+            <div class="card" style="width: 90%">
+              <img
+                src="IMAGENES/hectormartinez.webp"
+                class="card-img-top img-thumbnail"
+                alt="imagen del jugador Héctor David Martínez"
+              />
+              <div class="card-body">
+                <h4>MARTÍNEZ ES UNO DE LOS PRÓXIMOS JUGADORES A VENDER</h4>
+                <p class="card-text">
+                  El Sevilla de España (que ya se llevó a Gonzalo Montiel hace poco) posó sus ojos en el zaguero zurdo del Millonario. Al desprenderse del francés Koundé, el conjunto español consultó condiciones por el internacional paraguayo. Aún no hay oferta concreta.
+                </p>
+                <a href="PAGES/mercadodepases.html#artMartinez" class="btn btnCard"
+                  >Leer más...</a
+                >
+              </div>
+            </div>
+          </article>
+          <article class="col-sm-12 col-md-6 col-lg-3 text-center">
+            <h2 class="h2">FECHAS Y HORARIOS CONFIRMADOS PARA LA LIGA</h2>
+            <div class="card" style="width: 90%">
+              <img
+                src="IMAGENES/marcelogallardo.webp  "
+                class="card-img-top img-thumbnail"
+                alt="..."
+              />
+              <div class="card-body">
+                <h4>YA SIN LIBERTADORES, RIVER APUNTARÁ DE LLENO AL BICAMPEONATO</h4>
+                <p class="card-text">
+                  La Liga Profesional de fútbol argentino confirmó los días y horarios de las próximas fechas, por lo que el Millonario ya tiene su agenda confirmada para la continuidad de la Superliga. Gimnasia, Aldosivi, Sarmiento, Independiente, Newell's, Arsenal y Central Córdoba, con días y horarios confirmados. 
+                </p>
+                <a href="PAGES/torneolocal.html#artFixture" class="btn btnCard"
+                  >Leer más...</a
+                >
+              </div>
+            </div>
+          </section>
+          </article>
+          <!-- ASIDE -->
+          <aside class="mx-5">
+            <section class="py-3">
+            <div class="row">
+            <article class="text-center mx-auto col-sm12 col-md-6 col-lg-6"
+            >
               <a
                 class="twitter-timeline"
                 data-width="400"
                 data-height="700"
                 data-theme="dark"
-                href="https://twitter.com/SMurstein?ref_src=twsrc%5Etfw"
-                >Tweets by SMurstein</a
+                href="https://twitter.com/RiverPlate?ref_src=twsrc%5Etfw">Tweets by RiverPlate</a>
               >
               <script
                 async
                 src="https://platform.twitter.com/widgets.js"
                 charset="utf-8"
               ></script>
-            </div>
+            </article>
+            <article class="text-center mx-auto col-sm12 col-md-6 col-lg-6"
+            ><iframe width="400" height="700" src="https://www.instagram.com/p/CgC7CvmpAk0/embed" frameborder="0"></iframe></article>
+          </div>
+          </section>
           </aside>
-        </div>
-      </section>
+      </div>
     </main>
           <!-- FIN MAIN -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
