--- a/PAGES/NOSOTROS.html
+++ b/PAGES/NOSOTROS.html
@@ -7,7 +7,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LA GALLARDETA</title>
+         <!-- META SEO -->
+         <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate. Queremos leerte y conocerte. Porque un River Más Grande lo hacemos entre todos.">
+         <meta name="keywords" content="River Plate, fútbol argentino, fútbol, Copa Libertadores, FIFA, AFA, Superliga Argentina, contacto, hinchas, socios, Estadio Monumental, Más Monumental, Millonario">
+         <meta name="author" content="Sebastián Murstein">
+    <title>LA GALLARDETA, vos también sos parte de nosotros.</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -15,7 +19,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
     <!-- WOW JS -->
     <link rel="stylesheet" href="../CSS/animate.css" />
     <link rel="shorcut icon" href="../IMAGENES/favicon.png" />
@@ -28,7 +32,7 @@
           <a class="navbar-brand" href="../index.html">
             <img
               class="logo escudo escudo2"
-              src="../IMAGENES/escudoriver.png"
+              src="../IMAGENES/river.png"
               alt="escudo River Plate"
             />
           </a>
@@ -45,25 +49,46 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link link" aria-current="page" href="../PAGES/torneolocal.html"
-                  >TORNEO LOCAL</a      
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="../PAGES/copalibertadores.html">COPA LIBERTADORES</a>
-              </li>
-              <li class="nav-item dropdown">
+            <ul class="ul navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="a nav-item">
                 <a
                   class="nav-link link"
-                  href="../PAGES/mercadodepases.html"
+                  aria-current="page"
+                  href="../PAGES/torneolocal.html"
+                  >TORNEO LOCAL</a
                 >
-                  MERCADO DE PASES
-                </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="../PAGES/NOSOTROS.html" tabindex="-1">NOSOTROS</a>
+              <li class="a nav-item">
+                <a class="nav-link link" href="../PAGES/copalibertadores.html"
+                  >COPA LIBERTADORES</a
+                >
+              </li>
+              <li class="a nav-item">
+                <a class="nav-link link" href="../PAGES/mercadodepases.html"
+                  >MERCADO DE PASES</a
+                >
+              </li>
+              <li class="a nav-item dropdown">
+                <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  GALERIA
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li class="a"><a class="dropdown-item" href="../PAGES/fotos.html">FOTOS</a></li>
+                  <li class="a"><a class="dropdown-item" href="../PAGES/videos.html">VIDEOS</a></li>
+                </ul>
+              </li>
+              <li class="a nav-item">
+                <a class="nav-link link" href="../PAGES/calendario.html"
+                  >CALENDARIO</a
+                >
+              </li>
+              <li class="a nav-item">
+                <a
+                  class="nav-link link"
+                  href="../PAGES/NOSOTROS.html "
+                  tabindex="-1"
+                  >NOSOTROS</a
+                >
               </li>
             </ul>
           </div>
@@ -74,7 +99,7 @@
     <!-- INICIO MAIN -->
     <main class="mx-5">
     <div class="row">
-    <article class="text-center col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    <article class="artNos text-center col-xs-12 col-sm-6 col-md-6 col-lg-6">
     <h2 class="titNos">NOSOTROS... SIEMPRE CON RIVER, SOLO CON RIVER</h2>
     <img class="imgNos img-thumbnail" src="../IMAGENES/gallardo1.webp" alt="imagen del entrenador Marcelo Gallardo">
     <p class="pNos">Primero fuimos hinchas, después socios, más tarde profesionales
@@ -82,12 +107,12 @@
     con una de las profesiones más emocionantes que existen. Te queremos leer a vos
     que sos tan parte de esto como nosotros.</p>
     </article>
-    <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    <article class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <form class="form col-xs-12 col-sm-12 col-md-6 col-lg-6" action="#">
         <h2 class="titForm">TU COMENTARIO</h2>
-        <input type="text" name="nombre" placeholder="Nombre y Apellido">
+        <input class="textForm" type="text" name="nombre" placeholder="Nombre y Apellido">
         <input type="mail" name="email" placeholder="xxxx@xxxx.com">
-        <textarea name="comentario" id="" cols="30" rows="10"></textarea>
+        <textarea name="comentario" id="" cols="5" rows="25"></textarea>
         <input class="btnForm" type="button" value="ENVIAR"></input>
     </form>
     </article>
