--- a/PAGES/copalibertadores.html
+++ b/PAGES/copalibertadores.html
@@ -7,7 +7,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LA GALLARDETA</title>
+    <!-- META SEO -->
+    <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate. Novedades y análisis de los partidos de River en la Copa Libertadores de América.">
+    <meta name="keywords" content="River Plate, fútbol internacional, fútbol, Copa Libertadores, FIFA, Marcelo Gallardo, Estadio Monumental, Más Monumental, Millonario">
+    <meta name="author" content="Sebastián Murstein">
+    <title>LA GALLARDETA, participación en la Copa Libertadores</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -16,7 +20,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href= "../css/main.css" />
-    <!-- WOW JS -->
+    <!-- WOW JS --> 
     <link rel="stylesheet" href="../CSS/animate.css" />
     <link rel="shorcut icon" href="../IMAGENES/favicon.png" />
   </head>
@@ -28,7 +32,7 @@
           <a class="navbar-brand" href="../index.html">
             <img
               class="logo escudo escudo2"
-              src="../IMAGENES/escudoriver.png"
+              src="../IMAGENES/river.png"
               alt="escudo River Plate"
             />
           </a>
@@ -45,8 +49,8 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+            <ul class="ul navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="a nav-item">
                 <a
                   class="nav-link link"
                   aria-current="page"
@@ -54,18 +58,37 @@
                   >TORNEO LOCAL</a
                 >
               </li>
-              <li class="nav-item">
+              <li class="a nav-item">
                 <a class="nav-link link" href="../PAGES/copalibertadores.html"
                   >COPA LIBERTADORES</a
                 >
               </li>
-              <li class="nav-item dropdown">
+              <li class="a nav-item">
                 <a class="nav-link link" href="../PAGES/mercadodepases.html"
                   >MERCADO DE PASES</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="../PAGES/NOSOTROS.html" tabindex="-1">NOSOTROS</a>
+              <li class="a nav-item dropdown">
+                <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  GALERIA
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li class="a"><a class="dropdown-item" href="../PAGES/fotos.html">FOTOS</a></li>
+                  <li class="a"><a class="dropdown-item" href="../PAGES/videos.html">VIDEOS</a></li>
+                </ul>
+              </li>
+              <li class="a nav-item">
+                <a class="nav-link link" href="PAGES/calendario.html"
+                  >CALENDARIO</a
+                >
+              </li>
+              <li class="a nav-item">
+                <a
+                  class="nav-link link"
+                  href="../PAGES/NOSOTROS.html "
+                  tabindex="-1"
+                  >NOSOTROS</a
+                >
               </li>
             </ul>
           </div>
