--- a/PAGES/mercadodepases.html
+++ b/PAGES/mercadodepases.html
@@ -7,7 +7,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LA GALLARDETA</title>
+    <!-- META SEO -->
+    <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate. Rumores, sondeos y el movimiento del mercado de pases del Más Grande.">
+    <meta name="keywords" content="River Plate, fútbol argentino, fútbol, Copa Libertadores, FIFA, AFA, Superliga Argentina, Marcelo Gallardo, Estadio Monumental, Más Monumental, Millonario, mercado de pases, refuerzos, Sudamerica, Europa">
+    <meta name="author" content="Sebastián Murstein">
+    <title>LA GALLARDETA, últimas noticias del Mercado de Pases</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -15,7 +19,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <!-- WOW JS -->
     <link rel="stylesheet" href="../CSS/animate.css" />
     <link rel="shorcut icon" href="../IMAGENES/favicon.png" />
@@ -28,7 +32,7 @@
           <a class="navbar-brand" href="../index.html">
             <img
               class="logo escudo escudo2"
-              src="../IMAGENES/escudoriver.png"
+              src="../IMAGENES/river.png"
               alt="escudo River Plate"
             />
           </a>
@@ -45,22 +49,46 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link link" aria-current="page" href="../PAGES/torneolocal.html"
+            <ul class="ul navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="a nav-item">
+                <a
+                  class="nav-link link"
+                  aria-current="page"
+                  href="../PAGES/torneolocal.html"
                   >TORNEO LOCAL</a
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="../PAGES/copalibertadores.html">COPA LIBERTADORES</a>
+              <li class="a nav-item">
+                <a class="nav-link link" href="../PAGES/copalibertadores.html"
+                  >COPA LIBERTADORES</a
+                >
               </li>
-              <li class="nav-item dropdown">
+              <li class="a nav-item">
+                <a class="nav-link link" href="../PAGES/mercadodepases.html"
+                  >MERCADO DE PASES</a
+                >
+              </li>
+              <li class="a nav-item dropdown">
+                <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  GALERIA
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li class="a"><a class="dropdown-item" href="../PAGES/fotos.html">FOTOS</a></li>
+                  <li class="a"><a class="dropdown-item" href="../PAGES/videos.html">VIDEOS</a></li>
+                </ul>
+              </li>
+              <li class="a nav-item">
+                <a class="nav-link link" href="PAGES/calendario.html"
+                  >CALENDARIO</a
+                >
+              </li>
+              <li class="a nav-item">
                 <a
                   class="nav-link link"
-                  href="../PAGES/mercadodepases.html">MERCADO DE PASES</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="../PAGES/NOSOTROS.html" tabindex="-1">NOSOTROS</a>
+                  href="../PAGES/NOSOTROS.html "
+                  tabindex="-1"
+                  >NOSOTROS</a
+                >
               </li>
             </ul>
           </div>
@@ -73,7 +101,19 @@
       <section class="py-3">
         <div class="row">
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
-            <h2 class="h2">SUÁREZ SIGUE DE VACACIONES MIENTRAS RIVER ESPERA</h2>
+            <h2 class="h2" id="artMartinez">¿MARTÍNEZ AL SEVILLA?</h2>
+            <img src="../IMAGENES/hectormartinez.webp" class="imgLali img-thumbnail"
+            alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
+            <p class="pCopa">El defensor central, en la mira por sus bajos rendimientos desde que sufrió una lesión muscular, sigue siendo codiciado por varios clubes europeos. Su juventud, su capacidad para salir con pelota dominada y su roce internacional (juega para la selección de Paragüay) llamó la atención en esta oportunidad del Sevilla. El club español se desprenderá de su zaguero francés Koundé y está buscando opciones en el mercado. River estaría dispuesto a desprenderse del jugador por no menos de 8 millones de euros. Por ahora, solo un sondeo.</p>
+          </article>
+          <article class="art text-center col-sm-12 col-md-12 col-lg-6">
+            <h2 class="h2" id="artSolari">PABLO CÉSAR SOLARI, NUEVO REFUERZO MILLONARIO</h2>
+            <img src="../IMAGENES/pablosolari.webp" class="imgLali img-thumbnail"
+            alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
+            <p class="pCopa">River llegó a un acuerdo y sumó a tercer refuerzo: Pablo César Solari será presentado en las próximas horas. El extremo de 21 años firmará por 4 años a cambio de 5 millones de dólares por el 60% del pase. El jugador, fanático de River como toda su familia, viene de ser la figura de Colo Colo y enfrentó al Millonario en la fase de grupos de la última Copa Libertadores. El jugador descartó ofertas de México y Brasil para cumplir su sueño de niño. ¡Bienvenido Pablo!</p>
+          </article>
+          <article class="art text-center col-sm-12 col-md-12 col-lg-6">
+            <h2 class="h2" id="artSuarez">SUÁREZ SIGUE DE VACACIONES MIENTRAS RIVER ESPERA</h2>
             <img src="../IMAGENES/luissuarezvacaciones.webp" class="imgLali img-thumbnail"
             alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
             <p class="pCopa">A horas de jugarse la clasificación a los Cuartos 
@@ -86,18 +126,11 @@
             de los mejores jugadores del mundo vestirá el Manto Sagrado</p>
           </article>
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
-            <h2 id="borja" class="h2">BORJA: DE SER CONFIRMADO A ESTAR PRÁCTICAMENTE DESCARTADO</h2>
+            <h2 id="artBorja" class="h2">BORJA: AL FIN LLEGÓ</h2>
             <img src="../IMAGENES/miguelborja.webp" class="imgLali img-thumbnail"
             alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
             <p class="pCopa">Después de tantas idas y venidas, de la intromisión de Palmerias
-            (dueño del 50% de la ficha del jugador) y que la transferencia casi se caiga, apareció
-            un nuevo imponderable que complicó la transacción: el contexto económico argentino.
-            La renuncia del Ministro de Economía, Martín Guzmán, con las consecuentes medidas
-            aún más restrictivas para el manejo de los dólares, dejó estancada la llegada de Miguel Borja.
-            Es más, desde Colombia dan por hecho que el pase no se hace y el futbolista ya fue avisado
-            que debe retornar a los entrenamientos con Junior. La situación solo podría volver a 
-            encausarse si River vence a Vélez y la dirigencia pide una extensión al Banco Central 
-            para poder girar las divisas al exterior.</p>
+            (dueño del 50% de la ficha del jugador), luego las restricciones del gobierno argentino en cuanto a la politica monetaria y que parecía que el pase no se hacía, Miguel Ángel Borja es el nuevo 9 de Gallardo. El colombiano admitió que presionó tanto a Junior como a Palmeiras para poder vestir el manto sagrado. La sensación es que con el bajo nivel de Brian Romero y la salida de Julián Álvarez al Manchester City, "el Colibrí" no tendrá mucha demora en saltar a la cancha. La idea es que debute ante Gimnasia el jueves 21 por la novena fecha de la Superliga.</p>
           </article>
         </div>
       </section>
