--- a/PAGES/calendario.html
+++ b/PAGES/calendario.html
@@ -97,7 +97,7 @@
       <!-- FIN HEADER -->
       <!-- MAIN -->
       <h2>PRÓXIMOS PARTIDOS DEL MÁS GRANDE</h2>
-      <div class="table-responsive">
+      <div class="table-responsive row">
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
