--- a/PAGES/torneolocal.html
+++ b/PAGES/torneolocal.html
@@ -19,7 +19,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../CSS/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <!-- WOW JS -->
     <link rel="stylesheet" href="../CSS/animate.css" />
     <link rel="shorcut icon" href="../IMAGENES/favicon.png" />
@@ -78,7 +78,7 @@
                 </ul>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="PAGES/calendario.html"
+                <a class="nav-link link" href="../PAGES/calendario.html"
                   >CALENDARIO</a
                 >
               </li>
