--- a/PAGES/NOSOTROS.html
+++ b/PAGES/NOSOTROS.html
@@ -98,8 +98,9 @@
     <!-- FIN HEADER -->
     <!-- INICIO MAIN -->
     <main class="mx-5">
+    <section class="py-3">
     <div class="row">
-    <article class="artNos text-center col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    <article class="artNos text-center col-sm-12 col-md-6 col-lg-6">
     <h2 class="titNos">NOSOTROS... SIEMPRE CON RIVER, SOLO CON RIVER</h2>
     <img class="imgNos img-thumbnail" src="../IMAGENES/gallardo1.webp" alt="imagen del entrenador Marcelo Gallardo">
     <p class="pNos">Primero fuimos hinchas, después socios, más tarde profesionales
@@ -107,8 +108,8 @@
     con una de las profesiones más emocionantes que existen. Te queremos leer a vos
     que sos tan parte de esto como nosotros.</p>
     </article>
-    <article class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <form class="form col-xs-6 col-sm-6 col-md-6 col-lg-6" action="#">
+    <article class="col-sm-12 col-md-6 col-lg-6">
+        <form class="form" action="#">
         <h2 class="titForm">TU COMENTARIO</h2>
         <input class="textForm" type="text" name="nombre" placeholder="Nombre y Apellido">
         <input type="mail" name="email" placeholder="xxxx@xxxx.com">
@@ -117,6 +118,7 @@
     </form>
     </article>
     </div>
+    </section>
     </main>
     <!-- FIN MAIN -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
