--- a/PAGES/NOSOTROS.html
+++ b/PAGES/NOSOTROS.html
@@ -100,7 +100,7 @@
     <main class="mx-5">
     <section class="py-3">
     <div class="row">
-    <article class="artNos art text-center col-sm-12 col-md-6 col-lg-6">
+    <article class="artNos art text-center col-xs-12 col-sm-12 col-md-6 col-lg-6">
     <h2 class="titNos">NOSOTROS... SIEMPRE CON RIVER, SOLO CON RIVER</h2>
     <img class="imgNos img-thumbnail" src="../IMAGENES/gallardo1.webp" alt="imagen del entrenador Marcelo Gallardo">
     <p class="pNos">Primero fuimos hinchas, después socios, más tarde profesionales
@@ -108,7 +108,7 @@
     con una de las profesiones más emocionantes que existen. Te queremos leer a vos
     que sos tan parte de esto como nosotros.</p>
     </article>
-    <article class="col-sm-12 col-md-6 col-lg-6">
+    <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
         <form class="form" action="#">
         <h2 class="titForm">TU COMENTARIO</h2>
         <input class="textForm" type="text" name="nombre" placeholder="Nombre y Apellido">
