retoques de SEO y tabulación

--- a/PAGES/NOSOTROS.html
+++ b/PAGES/NOSOTROS.html
@@ -7,10 +7,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-         <!-- META SEO -->
-         <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate. Queremos leerte y conocerte. Porque un River Más Grande lo hacemos entre todos.">
-         <meta name="keywords" content="River Plate, fútbol argentino, fútbol, Copa Libertadores, FIFA, AFA, Superliga Argentina, contacto, hinchas, socios, Estadio Monumental, Más Monumental, Millonario">
-         <meta name="author" content="Sebastián Murstein">
+    <!-- META SEO -->
+    <meta name="description" content="La Gallardeta, queremos leerte y conocerte. Porque un River Más Grande lo hacemos entre todos.">
+    <meta name="keywords" content="River Plate, fútbol argentino, fútbol, contacto, hinchas, socios, comunicación, foro">
+    <meta name="author" content="Sebastián Murstein">
     <title>LA GALLARDETA, vos también sos parte de nosotros.</title>
     <!-- Bootstrap CSS -->
     <link
@@ -37,36 +37,20 @@
             />
           </a>
           <h1 class="tit wow animate__flash">LA GALLARDETA</h1>
-          <button
-            class="navbar-toggler btnHead"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler btnHead" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="ul navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="a nav-item">
-                <a
-                  class="nav-link link"
-                  aria-current="page"
-                  href="../PAGES/torneolocal.html"
-                  >TORNEO LOCAL</a
-                >
+                <a class="nav-link link" aria-current="page" href="../PAGES/torneolocal.html">TORNEO LOCAL</a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/copalibertadores.html"
-                  >COPA LIBERTADORES</a
-                >
+                <a class="nav-link link" href="../PAGES/copalibertadores.html">COPA LIBERTADORES</a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/mercadodepases.html"
-                  >MERCADO DE PASES</a
-                >
+                <a class="nav-link link" href="../PAGES/mercadodepases.html">MERCADO DE PASES</a>
               </li>
               <li class="a nav-item dropdown">
                 <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -78,17 +62,10 @@
                 </ul>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/calendario.html"
-                  >CALENDARIO</a
-                >
+                <a class="nav-link link" href="../PAGES/calendario.html">CALENDARIO</a>
               </li>
               <li class="a nav-item">
-                <a
-                  class="nav-link link"
-                  href="../PAGES/NOSOTROS.html "
-                  tabindex="-1"
-                  >NOSOTROS</a
-                >
+                <a class="nav-link link" href="../PAGES/NOSOTROS.html" tabindex="-1">NOSOTROS</a>
               </li>
             </ul>
           </div>
@@ -112,8 +89,8 @@
         <form class="form" action="#">
         <h2 class="titForm">TU COMENTARIO</h2>
         <input class="textForm" type="text" name="nombre" placeholder="Nombre y Apellido">
-        <input type="mail" name="email" placeholder="xxxx@xxxx.com">
-        <textarea name="comentario" id="" cols="5" rows="25"></textarea>
+        <input class="mailForm" type="mail" name="email" placeholder="xxxx@xxxx.com">
+        <textarea name="comentario" id="" cols="15" rows="10"></textarea>
         <input class="btnForm" type="button" value="ENVIAR"></input>
     </form>
     </article>
@@ -132,26 +109,19 @@
       <h3 class="titPie WOW animate__bounce">SEGUINOS EN NUESTRAS REDES</h3>
       <ul class="pieRrss">
         <li>
-          <a
-            class="pieRrss"
-            href="https://www.instagram.com/sebamurstein/"
-            target="_blank"
-          >
-            <img class="btnPie rrss" src="../IMAGENES/insta.png" alt="icono instagram"
-          /></a>
+          <a class="pieRrss" href="https://www.instagram.com/sebamurstein/" target="_blank">
+            <img class="btnPie rrss" src="../IMAGENES/insta.png" alt="icono instagram"/>
+          </a>
         </li>
         <li>
           <a href="https://twitter.com/sebamurstein" target="_blank">
-            <img class="btnPie rrss" src="../IMAGENES/twitter.png" alt="icono twitter"
-          /></a>
+            <img class="btnPie rrss" src="../IMAGENES/twitter.png" alt="icono twitter"/>
+          </a>
         </li>
         <li>
           <a href="https://www.facebook.com/SebaMurstein" target="_blank">
-            <img
-              class="btnPie rrss"
-              src="../IMAGENES/facebook.png"
-              alt="icono facebook"
-          /></a>
+            <img class="btnPie rrss" src="../IMAGENES/facebook.png" alt="icono facebook"/>
+          </a>
         </li>
       </ul>
     </footer>
