--- a/PAGES/calendario.html
+++ b/PAGES/calendario.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- META SEO -->
-    <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate. Conocé fecha, horario y estadio de nuestros próximos rivales en todas las competencias.">
-    <meta name="keywords" content="River Plate, fútbol argentino, fútbol, fixture, calendario, Copa Libertadores, FIFA, AFA, Superliga Argentina, Marcelo Gallardo, Estadio Monumental, Más Monumental, Millonario">
+    <meta name="description" content="La Gallardeta, conocé fecha, horario y estadio de nuestros próximos rivales en todas las competencias.">
+    <meta name="keywords" content="River Plate, fútbol argentino, fútbol, fixture, calendario, Copa Libertadores, FIFA, AFA, Superliga Argentina">
     <meta name="author" content="Sebastián Murstein">
     <title>LA GALLARDETA, fixture de todas las competencias.</title>
     <!-- Bootstrap CSS -->
@@ -24,6 +24,7 @@
     <link rel="shorcut icon" href="../IMAGENES/favicon.png" />
   </head>
   </head>
+  <body class="body">
       <!-- NAV BS -->
       <header class="w-100">    
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -84,7 +85,7 @@
                 <li class="a nav-item">
                   <a
                     class="nav-link link"
-                    href="../PAGES/NOSOTROS.html "
+                    href="../PAGES/nosotros.html "
                     tabindex="-1"
                     >NOSOTROS</a
                   >
@@ -97,7 +98,7 @@
       <!-- FIN HEADER -->
       <!-- MAIN -->
       <h2>PRÓXIMOS PARTIDOS DEL MÁS GRANDE</h2>
-      <div class="table-responsive row">
+      <div class="table-responsive">
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
