--- a/PAGES/mercadodepases.html
+++ b/PAGES/mercadodepases.html
@@ -8,21 +8,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- META SEO -->
-    <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate. Rumores, sondeos y el movimiento del mercado de pases del Más Grande.">
-    <meta name="keywords" content="River Plate, fútbol argentino, fútbol, Copa Libertadores, FIFA, AFA, Superliga Argentina, Marcelo Gallardo, Estadio Monumental, Más Monumental, Millonario, mercado de pases, refuerzos, Sudamerica, Europa">
+    <meta name="description" content="La Gallardeta, rumores, sondeos y el movimiento del mercado de pases del Más Grande.">
+    <meta name="keywords" content="River Plate, fútbol argentino, fútbol, mercado de pases, refuerzos, Sudamerica, Europa">
     <meta name="author" content="Sebastián Murstein">
     <title>LA GALLARDETA, últimas noticias del Mercado de Pases</title>
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/main.css" />
     <!-- WOW JS -->
     <link rel="stylesheet" href="../CSS/animate.css" />
-    <link rel="shorcut icon" href="../IMAGENES/favicon.png" />
+    <link rel="shorcut icon" href="../IMAGENES/favicon.png"/>
   </head>
   <body class="body">
     <!-- NAV BS -->
@@ -30,43 +26,27 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img
-              class="logo escudo escudo2"
-              src="../IMAGENES/river.png"
-              alt="escudo River Plate"
-            />
+            <img class="logo escudo escudo2" src="../IMAGENES/river.png" alt="escudo River Plate"/>
           </a>
           <h1 class="tit wow animate__flash">LA GALLARDETA</h1>
-          <button
-            class="navbar-toggler btnHead"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
+          <button class="navbar-toggler btnHead" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="ul navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="a nav-item">
-                <a
-                  class="nav-link link"
-                  aria-current="page"
-                  href="../PAGES/torneolocal.html"
-                  >TORNEO LOCAL</a
-                >
+                <a class="nav-link link" aria-current="page" href="../PAGES/torneolocal.html">TORNEO LOCAL
+                </a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/copalibertadores.html"
-                  >COPA LIBERTADORES</a
-                >
+                <a class="nav-link link" href="../PAGES/copalibertadores.html">COPA LIBERTADORES
+                </a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/mercadodepases.html"
-                  >MERCADO DE PASES</a
-                >
+                <a class="nav-link link" href="../PAGES/mercadodepases.html">MERCADO DE PASES
+                </a>
               </li>
               <li class="a nav-item dropdown">
                 <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -78,17 +58,12 @@
                 </ul>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="PAGES/calendario.html"
-                  >CALENDARIO</a
-                >
+                <a class="nav-link link" href="PAGES/calendario.html">CALENDARIO
+                </a>
               </li>
               <li class="a nav-item">
-                <a
-                  class="nav-link link"
-                  href="../PAGES/NOSOTROS.html "
-                  tabindex="-1"
-                  >NOSOTROS</a
-                >
+                <a class="nav-link link" href="../PAGES/NOSOTROS.html" tabindex="-1">NOSOTROS
+                </a>
               </li>
             </ul>
           </div>
@@ -103,13 +78,13 @@
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
             <h2 class="h2" id="artMartinez">¿MARTÍNEZ AL SEVILLA?</h2>
             <img src="../IMAGENES/hectormartinez.webp" class="imgLali img-thumbnail"
-            alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
+            alt="imagen de Héctor David Martínez"/>
             <p class="pCopa">El defensor central, en la mira por sus bajos rendimientos desde que sufrió una lesión muscular, sigue siendo codiciado por varios clubes europeos. Su juventud, su capacidad para salir con pelota dominada y su roce internacional (juega para la selección de Paragüay) llamó la atención en esta oportunidad del Sevilla. El club español se desprenderá de su zaguero francés Koundé y está buscando opciones en el mercado. River estaría dispuesto a desprenderse del jugador por no menos de 8 millones de euros. Por ahora, solo un sondeo.</p>
           </article>
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
             <h2 class="h2" id="artSolari">PABLO CÉSAR SOLARI, NUEVO REFUERZO MILLONARIO</h2>
             <img src="../IMAGENES/pablosolari.webp" class="imgLali img-thumbnail"
-            alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
+            alt="imagen de Pablo César Solari"/>
             <p class="pCopa">River llegó a un acuerdo y sumó a tercer refuerzo: Pablo César Solari será presentado en las próximas horas. El extremo de 21 años firmará por 4 años a cambio de 5 millones de dólares por el 60% del pase. El jugador, fanático de River como toda su familia, viene de ser la figura de Colo Colo y enfrentó al Millonario en la fase de grupos de la última Copa Libertadores. El jugador descartó ofertas de México y Brasil para cumplir su sueño de niño. ¡Bienvenido Pablo!</p>
           </article>
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
@@ -128,7 +103,7 @@
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
             <h2 id="artBorja" class="h2">BORJA: AL FIN LLEGÓ</h2>
             <img src="../IMAGENES/miguelborja.webp" class="imgLali img-thumbnail"
-            alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
+            alt="imagen de Miguel Ángel Borja"/>
             <p class="pCopa">Después de tantas idas y venidas, de la intromisión de Palmerias
             (dueño del 50% de la ficha del jugador), luego las restricciones del gobierno argentino en cuanto a la politica monetaria y que parecía que el pase no se hacía, Miguel Ángel Borja es el nuevo 9 de Gallardo. El colombiano admitió que presionó tanto a Junior como a Palmeiras para poder vestir el manto sagrado. La sensación es que con el bajo nivel de Brian Romero y la salida de Julián Álvarez al Manchester City, "el Colibrí" no tendrá mucha demora en saltar a la cancha. La idea es que debute ante Gimnasia el jueves 21 por la novena fecha de la Superliga.</p>
           </article>
@@ -147,32 +122,19 @@
     <h3 class="titPie WOW animate__bounce">SEGUINOS EN NUESTRAS REDES</h3>
     <ul class="pieRrss">
       <li>
-        <a
-          class="pieRrss"
-          href="https://www.instagram.com/sebamurstein/"
-          target="_blank"
-        >
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/insta.png"
-            alt="icono instagram"
-        /></a>
+        <a class="pieRrss" href="https://www.instagram.com/sebamurstein/" target="_blank">
+          <img class="btnPie rrss" src="../IMAGENES/insta.png" alt="icono instagram"/>
+        </a>
       </li>
       <li>
         <a href="https://twitter.com/sebamurstein" target="_blank">
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/twitter.png"
-            alt="icono twitter"
-        /></a>
+          <img class="btnPie rrss" src="../IMAGENES/twitter.png" alt="icono twitter"/>
+        </a>
       </li>
       <li>
         <a href="https://www.facebook.com/SebaMurstein" target="_blank">
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/facebook.png"
-            alt="icono facebook"
-        /></a>
+          <img class="btnPie rrss" src="../IMAGENES/facebook.png" alt="icono facebook"/>
+        </a>
       </li>
     </ul>
   </footer>
@@ -185,5 +147,4 @@
   <!-- FIN WOW ANIMACIONES -->
 </body>
 </html>
-  </body>
-</html>
+
