--- a/PAGES/copalibertadores.html
+++ b/PAGES/copalibertadores.html
@@ -1,76 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+<!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- META SEO -->
-    <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate. Novedades y análisis de los partidos de River en la Copa Libertadores de América.">
-    <meta name="keywords" content="River Plate, fútbol internacional, fútbol, Copa Libertadores, FIFA, Marcelo Gallardo, Estadio Monumental, Más Monumental, Millonario">
+<!-- META SEO -->
+    <meta name="description" content="La Gallardeta, todo el recorrido del club por la Copa Libertadores de América.">
+    <meta name="keywords" content="River Plate, fútbol internacional, fútbol, fútbol sudamericano, Copa Libertadores, FIFA">
     <meta name="author" content="Sebastián Murstein">
     <title>LA GALLARDETA, participación en la Copa Libertadores</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+<!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"/>
     <link rel="stylesheet" href= "../css/main.css" />
-    <!-- WOW JS --> 
+<!-- WOW JS --> 
     <link rel="stylesheet" href="../CSS/animate.css" />
     <link rel="shorcut icon" href="../IMAGENES/favicon.png" />
   </head>
   <body class="body">
-    <!-- NAV BS -->
+<!-- NAV BS -->
     <header class="w-100">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img
-              class="logo escudo escudo2"
-              src="../IMAGENES/river.png"
-              alt="escudo River Plate"
-            />
+            <img class="logo escudo escudo2" src="../IMAGENES/river.png" alt="escudo River Plate"/>
           </a>
           <h1 class="tit wow animate__flash">LA GALLARDETA</h1>
-          <button
-            class="navbar-toggler btnHead"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
+          <button class="navbar-toggler btnHead" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+            </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="ul navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="a nav-item">
-                <a
-                  class="nav-link link"
-                  aria-current="page"
-                  href="../PAGES/torneolocal.html"
-                  >TORNEO LOCAL</a
-                >
+                <a class="nav-link link" aria-current="page" href="../PAGES/torneolocal.html">TORNEO LOCAL
+                </a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/copalibertadores.html"
-                  >COPA LIBERTADORES</a
-                >
+                <a class="nav-link link" href="../PAGES/copalibertadores.html">COPA LIBERTADORES
+                </a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/mercadodepases.html"
-                  >MERCADO DE PASES</a
-                >
+                <a class="nav-link link" href="../PAGES/mercadodepases.html">MERCADO DE PASES
+                </a>
               </li>
               <li class="a nav-item dropdown">
-                <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  GALERIA
+                <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">GALERIA
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li class="a"><a class="dropdown-item" href="../PAGES/fotos.html">FOTOS</a></li>
@@ -78,31 +60,26 @@
                 </ul>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="PAGES/calendario.html"
-                  >CALENDARIO</a
-                >
+                <a class="nav-link link" href="PAGES/calendario.html">CALENDARIO
+                </a>
               </li>
               <li class="a nav-item">
-                <a
-                  class="nav-link link"
-                  href="../PAGES/NOSOTROS.html "
-                  tabindex="-1"
-                  >NOSOTROS</a
-                >
+                <a class="nav-link link" href="../PAGES/nosotros.html" tabindex="-1">NOSOTROS
+                </a >
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <!-- FIN HEADER -->
-    <!-- INICIO MAIN -->
+<!-- FIN HEADER -->
+<!-- INICIO MAIN -->
     <main class="mx-5">
         <section class="py-3">
           <div class="row">
             <article class="art text-center col-sm-12 col-md-12 col-lg-6">
               <h2 id="velezRiver" class="h2">RIVER Y UNA DURA CAÍDA EN LINIERS</h2>
-              <img class="img-thumbnail imgLali" src="../IMAGENES/velezriver.webp" alt="imagen jugador de Velez y River">
+              <img class="img-thumbnail imgLali" src="../IMAGENES/velezriver.webp" alt="imagen jugadores de Velez y River">
               <p class="pCopa">El Millonario tuvo una olvidable actuación ante Vélez en Liniers
                 y cayó por 1 a 0 en la ida de los octavos de final de la Copa CONMEBOL
                 Libertadores. El equipo de Gallardo empezó bien, con unos 10 minutos iniciales
@@ -116,7 +93,7 @@
               </article>
               <article class="art text-center col-sm-12 col-md-12 col-lg-6">
                 <h2 class="h2">LO DE ALIENDRO NO FUE MÁS QUE UN SUSTO</h2>
-                <img class="img-thumbnail imgLali" src="../IMAGENES/rodrigoaliendro.webp" alt="foto jugador Rodrigo Aliendro">
+                <img class="img-thumbnail imgLali" src="../IMAGENES/rodrigoaliendro.webp" alt="foto del jugador Rodrigo Aliendro">
                 <p class="pCopa">El mal trago de Liniers también se reflejó en el debut de uno de los refuerzos:
                 Rodrigo Aliendro vistió por primera vez y de manera oficial el manto sagrado. Sin embargo
                 el ex Colón de Santa Fe tuvo poco tiempo de acción debido a un terrible codazo (¿¿¿Y EL VAR???)
@@ -129,55 +106,41 @@
             </section>
             </div>
         </main>
-            <!-- FIN MAIN -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+<!-- FIN MAIN -->
+<!-- Option 1: Bootstrap Bundle with Popper -->
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"
   ></script>
-  <!-- INICIO FOOTER -->
+<!-- INICIO FOOTER -->
   <footer class="pie">
     <h3 class="titPie WOW animate__bounce">SEGUINOS EN NUESTRAS REDES</h3>
     <ul class="pieRrss">
       <li>
-        <a
-          class="pieRrss"
-          href="https://www.instagram.com/sebamurstein/"
-          target="_blank"
-        >
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/insta.png"
-            alt="icono instagram"
-        /></a>
+        <a class="pieRrss" href="https://www.instagram.com/sebamurstein/" target="_blank">
+          <img class="btnPie rrss" src="../IMAGENES/insta.png" alt="icono instagram"/>
+        </a>
       </li>
       <li>
         <a href="https://twitter.com/sebamurstein" target="_blank">
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/twitter.png"
-            alt="icono twitter"
-        /></a>
+          <img class="btnPie rrss" src="../IMAGENES/twitter.png" alt="icono twitter"/>
+        </a>
       </li>
       <li>
         <a href="https://www.facebook.com/SebaMurstein" target="_blank">
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/facebook.png"
-            alt="icono facebook"
-        /></a>
+          <img class="btnPie rrss" src="../IMAGENES/facebook.png" alt="icono facebook"/>
+        </a>
       </li>
     </ul>
   </footer>
-  <!-- FIN FOOTER -->
-  <!-- WOW ANIMACIONES -->
+<!-- FIN FOOTER -->
+<!-- WOW ANIMACIONES -->
   <script src="../JS/wow.min.js"></script>
   <script>
-    new WOW().init();
+  new WOW().init();
   </script>
-  <!-- FIN WOW ANIMACIONES -->
+<!-- FIN WOW ANIMACIONES -->
 </body>
 </html>
-  </body>
-</html>
+
