--- a/PAGES/torneolocal.html
+++ b/PAGES/torneolocal.html
@@ -1,76 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
+ <head>
+<!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <!-- META SEO -->
-     <meta name="description" content="La Gallardeta, toda la info del Club Atlético River Plate. Novedades y análisis de los partidos de River en el Torneo Local.">
-     <meta name="keywords" content="River Plate, fútbol argentino, fútbol, AFA, Superliga Argentina, Marcelo Gallardo, Estadio Monumental, Más Monumental, Millonario">
-     <meta name="author" content="Sebastián Murstein">
+<!-- META SEO -->
+    <meta name="description" content="La Gallardeta, novedades y análisis de los partidos de River en el Torneo Local.">
+    <meta name="keywords" content="River Plate, fútbol argentino, fútbol, AFA, Superliga Argentina">
+    <meta name="author" content="Sebastián Murstein">
     <title>LA GALLARDETA, toda la info de River en el Torneo Local</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+<!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/main.css" />
-    <!-- WOW JS -->
+<!-- WOW JS -->
     <link rel="stylesheet" href="../CSS/animate.css" />
     <link rel="shorcut icon" href="../IMAGENES/favicon.png" />
   </head>
-  <body class="body">
-    <!-- NAV BS -->
+ <body class="body">
+<!-- NAV BS -->
     <header class="w-100">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img
-              class="logo escudo escudo2"
-              src="../IMAGENES/river.png"
-              alt="escudo River Plate"
-            />
+            <img class="logo escudo escudo2" src="../IMAGENES/river.png" alt="escudo River Plate"/>
           </a>
           <h1 class="tit wow animate__flash">LA GALLARDETA</h1>
-          <button
-            class="navbar-toggler btnHead"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
+          <button class="navbar-toggler btnHead" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+            </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="ul navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="a nav-item">
-                <a
-                  class="nav-link link"
-                  aria-current="page"
-                  href="../PAGES/torneolocal.html"
-                  >TORNEO LOCAL</a
-                >
+                <a class="nav-link link" aria-current="page" href="../PAGES/torneolocal.html">TORNEO LOCAL
+                </a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/copalibertadores.html"
-                  >COPA LIBERTADORES</a
-                >
+                <a class="nav-link link" href="../PAGES/copalibertadores.html">COPA LIBERTADORES
+                </a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/mercadodepases.html"
-                  >MERCADO DE PASES</a
-                >
+                <a class="nav-link link" href="../PAGES/mercadodepases.html">MERCADO DE PASES
+                </a>
               </li>
               <li class="a nav-item dropdown">
-                <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  GALERIA
+                <a class="nav-link link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">GALERIA
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li class="a"><a class="dropdown-item" href="../PAGES/fotos.html">FOTOS</a></li>
@@ -78,17 +60,12 @@
                 </ul>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/calendario.html"
-                  >CALENDARIO</a
-                >
+                <a class="nav-link link" href="../PAGES/calendario.html">CALENDARIO
+                </a>
               </li>
               <li class="a nav-item">
-                <a
-                  class="nav-link link"
-                  href="../PAGES/NOSOTROS.html "
-                  tabindex="-1"
-                  >NOSOTROS</a
-                >
+                <a class="nav-link link" href="../PAGES/nosotros.html" tabindex="-1">NOSOTROS
+                </a>
               </li>
             </ul>
           </div>
@@ -96,14 +73,14 @@
       </nav>
     </header>
 <!-- FIN HEADER -->
-    <!-- INICIO MAIN -->
+<!-- INICIO MAIN -->
     <main class="mx-5">
       <section class="py-3">
         <div class="row">
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
             <h2 class="h2" id="artFixture">PRÓXIMAS FECHAS Y HORARIOS CONFIRMADOS</h2>
             <img src="../IMAGENES/marcelogallardo.webp" class="imgLali img-thumbnail"
-            alt="imagen del partido entre River y Vélez"/>
+            alt="imagen de Marcelo Daniel Gallardo"/>
             <p class="pCopa">La Superliga Argentina de fútbol dio a conocer las fechas y horarios de los próximos partidos. En lo que respecta al Millonario, así se disputarán los próximos compromisos: FECHA 9 Jueves 21/07 21.30 horas vs Gimnasia(L); FECHA 10 Domingo 24/07 15.30 horas vs Aldosivi(V); FECHA 11 Domingo 31/07 20.30 horas vs Sarmiento(L); FECHA 12 domingo 07/08 20.30 horas vs Independiente(V); FECHA 13 sábado 13/08 20.30 horas vs Newell's(L); FECHA 14 miércoles 17/08 19 horas vs Arsenal(V); FECHA 15 domingo 21/08 18 horas vs Centra Córdoba(L).</p>
           </article>
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
@@ -115,7 +92,7 @@
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
             <h2 class="h2">BELTRÁN VOLVIÓ A SER TITULAR TRAS SU REGRESO DE COLÓN</h2>
             <img src="../IMAGENES/lucasbeltran.webp" class="imgLali img-thumbnail"
-            alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
+            alt="imagen de jugadores de River Plate y Huracán"/>
             <p class="pCopa">El cordobés fue la única referencia inicial en el ataque, y volvió a 
             jugar desde el arranque luego de su paso que terminó en escándalo por Colón de Santa Fé. El "colo"
             luchó más de lo que jugó, se lo vio colaborativo y combativo, pero estuvo muy solo a la hora de pensar
@@ -127,7 +104,7 @@
           <article class="art text-center col-sm-12 col-md-12 col-lg-6">
             <h2 class="h2">HURACÁN LE ATESTÓ OTRO GOLPE A UN RIVER IRRECONOCIBLE</h2>
             <img src="../IMAGENES/riverhuracan.jpg" class="imgLali img-thumbnail"
-            alt="imagen de Luis Suarez y Lio Messi de vacaciones"/>
+            alt="imagen de jugadores de River Plate y Huracán"/>
             <p class="pCopa">River cerró una semana paupérrima al perder por 3 a 2 ante Huracán 
             en Parque Patricios. Con mayoría de suplentes y un rendimiento alarmante, el Millonario
             no hizo pie y volvió a dejar una imagen desconcertante. Los goles de River fueron de Leandro González
@@ -140,54 +117,38 @@
       </section>
     </main>
 <!-- CIERRE MAIN -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+<!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"
-  ></script>
-  <!-- INICIO FOOTER -->
+    crossorigin="anonymous">
+    </script>
+<!-- INICIO FOOTER -->
   <footer class="pie">
     <h3 class="titPie WOW animate__bounce">SEGUINOS EN NUESTRAS REDES</h3>
     <ul class="pieRrss">
       <li>
-        <a
-          class="pieRrss"
-          href="https://www.instagram.com/sebamurstein/"
-          target="_blank"
-        >
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/insta.png"
-            alt="icono instagram"
-        /></a>
+        <a class="pieRrss" href="https://www.instagram.com/sebamurstein/" target="_blank">
+          <img class="btnPie rrss" src="../IMAGENES/insta.png" alt="icono instagram"/>
+        </a>
       </li>
       <li>
         <a href="https://twitter.com/sebamurstein" target="_blank">
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/twitter.png"
-            alt="icono twitter"
-        /></a>
+          <img class="btnPie rrss" src="../IMAGENES/twitter.png" alt="icono twitter"/>
+        </a>
       </li>
       <li>
         <a href="https://www.facebook.com/SebaMurstein" target="_blank">
-          <img
-            class="btnPie rrss"
-            src="../IMAGENES/facebook.png"
-            alt="icono facebook"
-        /></a>
+          <img class="btnPie rrss" src="../IMAGENES/facebook.png" alt="icono facebook"/>
+        </a>
       </li>
     </ul>
   </footer>
-  <!-- FIN FOOTER -->
-  <!-- WOW ANIMACIONES -->
+<!-- FIN FOOTER -->
+<!-- WOW ANIMACIONES -->
   <script src="../JS/wow.min.js"></script>
   <script>
-    new WOW().init();
+  new WOW().init();
   </script>
-  <!-- FIN WOW ANIMACIONES -->
+<!-- FIN WOW ANIMACIONES -->
 </body>
-</html>
-  </body>
 </html>
