cambio nombre page nosotros a contacto

--- a/PAGES/calendario.html
+++ b/PAGES/calendario.html
@@ -85,7 +85,7 @@
                 <li class="a nav-item">
                   <a
                     class="nav-link link"
-                    href="../PAGES/nosotros.html "
+                    href="../PAGES/contacto.html"
                     tabindex="-1"
                     >NOSOTROS</a
                   >
