--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -65,7 +65,7 @@
                 <a class="nav-link link" href="../PAGES/calendario.html">CALENDARIO</a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/nosotros.html" tabindex="-1">NOSOTROS</a>
+                <a class="nav-link link" href="../PAGES/contacto.html" tabindex="-1">NOSOTROS</a>
               </li>
             </ul>
           </div>
