--- a/PAGES/copalibertadores.html
+++ b/PAGES/copalibertadores.html
@@ -64,7 +64,7 @@
                 </a>
               </li>
               <li class="a nav-item">
-                <a class="nav-link link" href="../PAGES/nosotros.html" tabindex="-1">NOSOTROS
+                <a class="nav-link link" href="../PAGES/contacto.html" tabindex="-1">NOSOTROS
                 </a >
               </li>
             </ul>
