--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <a class="nav-link link" href="PAGES/calendario.html">CALENDARIO</a>
                 </li>
                 <li class="a nav-item">
-                  <a class="nav-link link" href="PAGES/nosotros.html">NOSOTROS</a>
+                  <a class="nav-link link" href="PAGES/contacto.html">NOSOTROS</a>
                 </li>
               </ul>
             </div>
